--- a/package.json
+++ b/package.json
@@ -45,13 +45,6 @@
     "release:alpha": "yarn release-cli --prerelease alpha && run-s postrelease",
     "postrelease": "# then run `git push --follow-tags origin main && yarn build && npm publish ./dist --access=public` to publish"
   },
-  "resolutions": {
-    "bear-jsutils": "^3.x"
-  },
-  "dependencies": {
-    "ulid": "^2.x",
-    "bear-jsutils": "^3.1.9"
-  },
   "devDependencies": {
     "@originjs/vite-plugin-commonjs": "1.0.3",
     "@types/jest": "^29.5.0",
@@ -61,6 +54,7 @@
     "cz-git": "^1.6.1",
     "eslint": "^8.37.0",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.7.0",
     "npm-run-all": "^4.1.5",
     "rollup-plugin-visualizer": "^5.9.0",
     "standard-version": "^9.5.0",
