--- a/package.json
+++ b/package.json
@@ -29,9 +29,8 @@
   "scripts": {
     "dev": "vite build -w",
     "build:claer": "rm -rf ./dist",
-    "build:post": "ts-node ./build-post-processors.js",
     "prepublishOnly": "run-s build",
-    "build": "run-s build:claer && tsc && vite build && run-s build:post",
+    "build": "run-s build:claer && tsc && vite build",
     "preview": "vite preview",
     "lint:fix": "eslint ./src --fix",
     "cz": "git-cz",
@@ -43,7 +42,7 @@
     "release:minor": "yarn release-cli -r minor && run-s postrelease",
     "release:patch": "yarn release-cli -r patch && run-s postrelease",
     "release:alpha": "yarn release-cli --prerelease alpha && run-s postrelease",
-    "postrelease": "# then run `git push --follow-tags origin main && yarn build && npm publish ./dist --access=public` to publish"
+    "postrelease": "# then run `git push --follow-tags origin main && yarn build && npm publish --access=public` to publish"
   },
   "devDependencies": {
     "@originjs/vite-plugin-commonjs": "1.0.3",
