--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bear-window-launcher",
   "version": "0.0.1",
-  "description": "Common javascript window open for project development",
+  "description": "This is a window launcher for front-end compatibility with browser issues when using window.open.",
   "keywords": [
     "typescript",
     "js-window-open"
