--- a/example/package.json
+++ b/example/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "pages:dev": "wrangler pages dev --proxy 3000 -- yarn dev",
+    "pages:deploy": "NODE_VERSION=18 yarn run build && wrangler pages deploy ./dist"
   },
   "resolutions": {
     "dayjs": "1.x"
@@ -18,13 +20,15 @@
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-query": "^3.39.3"
+    "react-query": "^3.39.3",
+    "vite-plugin-mkcert": "1.16.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "typescript": "^4.9.3",
-    "vite": "^4.2.0"
+    "vite": "^4.2.0",
+    "wrangler": "^3.11.0"
   }
 }
