--- a/example/package.json
+++ b/example/package.json
@@ -11,12 +11,17 @@
     "pages:deploy": "NODE_VERSION=18 yarn run build && wrangler pages deploy ./dist"
   },
   "resolutions": {
-    "dayjs": "1.x"
+    "dayjs": "1.x",
+    "styled-components": "5.3.9"
   },
   "dependencies": {
+    "@swc/plugin-styled-components": "^1.5.68",
+    "@types/styled-components": "^5.1.26",
     "axios": "^1.6.5",
-    "bear-jsutils": "^3.1.9",
+    "bear-jsutils": "3.2.0-alpha.4",
     "bear-window-launcher": "link:..",
+    "bear-react-table": "4.3.8-alpha.1",
+    "styled-components": "5.3.9",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
