--- a/example/package.json
+++ b/example/package.json
@@ -12,20 +12,20 @@
   },
   "resolutions": {
     "dayjs": "1.x",
-    "styled-components": "5.3.9"
+    "styled-components": "5"
   },
   "dependencies": {
+    "@swc/core": "^1.3.68",
     "@swc/plugin-styled-components": "^1.5.68",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.6.5",
     "bear-jsutils": "3.2.0-alpha.4",
     "bear-window-launcher": "link:..",
-    "bear-react-table": "4.3.8-alpha.1",
+    "bear-react-table": "4.3.8-alpha.2",
     "styled-components": "5.3.9",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-query": "^3.39.3",
     "vite-plugin-mkcert": "1.16.0"
   },
   "devDependencies": {
