--- a/example/package.json
+++ b/example/package.json
@@ -20,8 +20,8 @@
     "@types/styled-components": "^5.1.26",
     "axios": "^1.6.5",
     "bear-jsutils": "3.2.0-alpha.4",
-    "bear-window-launcher": "link:..",
-    "bear-react-table": "4.3.8-alpha.2",
+    "@acrool/window-launcher": "link:..",
+    "@acrool/react-table": "4.3.8-alpha.2",
     "styled-components": "5.3.9",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
