--- a/example/package.json
+++ b/example/package.json
@@ -15,18 +15,19 @@
     "styled-components": "5"
   },
   "dependencies": {
+    "@acrool/react-table": "5.1.1-alpha.0",
+    "@acrool/window-launcher": "link:..",
     "@swc/core": "^1.3.68",
     "@swc/plugin-styled-components": "^1.5.68",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.6.5",
     "bear-jsutils": "3.2.0-alpha.4",
-    "@acrool/window-launcher": "link:..",
-    "@acrool/react-table": "4.3.8-alpha.2",
-    "styled-components": "5.3.9",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "vite-plugin-mkcert": "1.16.0"
+    "styled-components": "5.3.9",
+    "vite-plugin-mkcert": "1.16.0",
+    "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
