--- a/example/package.json
+++ b/example/package.json
@@ -20,6 +20,7 @@
     "@swc/core": "^1.3.68",
     "@swc/plugin-styled-components": "^1.5.68",
     "@types/styled-components": "^5.1.26",
+    "@types/dom-to-image": "^2.6.7",
     "axios": "^1.6.5",
     "bear-jsutils": "3.2.0-alpha.4",
     "dayjs": "^1.11.10",
@@ -27,7 +28,8 @@
     "react-dom": "^18.2.0",
     "styled-components": "5.3.9",
     "vite-plugin-mkcert": "1.16.0",
-    "vite-plugin-svgr": "^4.2.0"
+    "vite-plugin-svgr": "^4.2.0",
+    "dom-to-image": "^2.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
