--- a/example/package.json
+++ b/example/package.json
@@ -12,11 +12,12 @@
   },
   "resolutions": {
     "dayjs": "1.x",
-    "styled-components": "5"
+    "styled-components": "5.3.9"
   },
   "dependencies": {
     "@acrool/react-table": "5.1.1-alpha.0",
     "@acrool/window-launcher": "link:..",
+    "@acrool/react-grid": "5.2.2",
     "@swc/core": "^1.3.68",
     "@swc/plugin-styled-components": "^1.5.68",
     "@types/styled-components": "^5.1.26",
