--- a/example/package.json
+++ b/example/package.json
@@ -15,22 +15,23 @@
     "styled-components": "5.3.9"
   },
   "dependencies": {
-    "@acrool/react-table": "5.1.2-alpha.1",
+    "@acrool/js-utils": "3.2.10",
+    "@acrool/react-grid": "5.2.3",
+    "@acrool/react-table": "5.1.3",
+    "@acrool/react-toaster": "^3.1.8",
     "@acrool/window-launcher": "link:..",
-    "@acrool/react-grid": "5.2.2",
     "@swc/core": "^1.3.68",
     "@swc/plugin-styled-components": "^1.5.68",
-    "@types/styled-components": "^5.1.26",
     "@types/dom-to-image": "^2.6.7",
+    "@types/styled-components": "^5.1.26",
     "axios": "^1.6.5",
-    "bear-jsutils": "3.2.0-alpha.4",
     "dayjs": "^1.11.10",
+    "dom-to-image": "^2.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "5.3.9",
     "vite-plugin-mkcert": "1.16.0",
-    "vite-plugin-svgr": "^4.2.0",
-    "dom-to-image": "^2.6.0"
+    "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
