--- a/example/package.json
+++ b/example/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "pages:dev": "wrangler pages dev --proxy 3000 -- yarn dev",
-    "pages:deploy": "NODE_VERSION=18 yarn build-storybook && wrangler pages deploy ./dist --project-name=acrool-window-launcher --branch main"
+    "pages:deploy": "NODE_VERSION=18 yarn build && wrangler pages deploy ./dist --project-name=acrool-window-launcher --branch main"
   },
   "resolutions": {
     "dayjs": "1.x",
