--- a/example/package.json
+++ b/example/package.json
@@ -8,35 +8,34 @@
     "build": "vite build",
     "preview": "vite preview",
     "pages:dev": "wrangler pages dev --proxy 3000 -- yarn dev",
-    "pages:deploy": "NODE_VERSION=18 yarn build && wrangler pages deploy ./dist --project-name=acrool-window-launcher --branch main"
+    "pages:deploy": "NODE_VERSION=20 yarn build && wrangler pages deploy ./dist --project-name=acrool-window-launcher --branch main"
   },
   "resolutions": {
     "styled-components": "6.1.17"
   },
   "dependencies": {
-    "@acrool/js-utils": "3.2.19",
-    "@acrool/react-grid": "6.0.4",
-    "@acrool/react-table": "5.1.13",
-    "@acrool/react-toaster": "^3.2.2",
-    "@acrool/window-launcher": "link:..",
-    "@swc/core": "^1.3.68",
-    "@swc/plugin-styled-components": "^6.8.2",
-    "@types/dom-to-image": "^2.6.7",
-    "axios": "^1.9.0",
-    "dayjs": "^1.11.13",
-    "dom-to-image": "^2.6.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "styled-components": "6.1.17",
-    "vite-plugin-mkcert": "1.16.0",
-    "vite-plugin-svgr": "^4.2.0"
-  },
-  "devDependencies": {
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react-swc": "^3.0.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.2.0",
-    "wrangler": "^3.11.0"
+      "@acrool/js-utils": "^3.2.20",
+      "@acrool/react-grid": "^6.0.5",
+      "@acrool/react-toaster": "^3.2.3",
+      "@acrool/react-table": "^5.1.14",
+      "@acrool/window-launcher": "link:..",
+      "@chromatic-com/storybook": "^1.5.0",
+      "@emotion/is-prop-valid": "^1.2.2",
+      "@swc/core": "^1.3.68",
+      "@swc/plugin-styled-components": "^6.8.2",
+      "@types/dom-to-image": "^2.6.7",
+      "@types/react": "^19.1.2",
+      "@types/react-dom": "^19.1.2",
+      "@vitejs/plugin-react-swc": "^3.0.0",
+      "dom-to-image": "^2.6.0",
+      "react": "19.1.0",
+      "react-dom": "19.1.0",
+      "sass": "^1.77.1",
+      "styled-components": "6.1.17",
+      "typescript": "^5.2.2",
+      "vite": "^6.3.4",
+      "vite-plugin-svgr": "^4.2.0",
+      "vite-plugin-mkcert": "1.17.8",
+      "wrangler": "4.14.4"
   }
 }
