--- a/package.json
+++ b/package.json
@@ -50,9 +50,9 @@
     "@types/node": "20.17.32",
     "@typescript-eslint/eslint-plugin": "^8.23.0",
     "@typescript-eslint/parser": "^8.23.0",
-    "@types/big.js": "^6.2.2",
     "cz-conventional-changelog": "3.3.0",
     "cz-customizable": "6.6.0",
+    "cz-git": "^1.11.1",
     "eslint": "^9.19.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "jest": "^29.5.0",
