--- a/example/package.json
+++ b/example/package.json
@@ -4,38 +4,46 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
     "pages:dev": "wrangler pages dev --proxy 3000 -- yarn dev",
-    "pages:deploy": "NODE_VERSION=20 yarn build && wrangler pages deploy ./dist --project-name=acrool-window-launcher --branch main"
+    "pages:deploy": "NODE_VERSION=20 yarn build-storybook && wrangler pages deploy ./storybook-static --project-name=acrool-react-dialog --branch main"
   },
   "resolutions": {
     "styled-components": "6.1.17"
   },
   "dependencies": {
-      "@acrool/js-utils": "^3.2.20",
-      "@acrool/react-grid": "^6.0.5",
-      "@acrool/react-toaster": "^3.2.3",
-      "@acrool/react-table": "^5.1.14",
-      "@acrool/window-launcher": "link:..",
-      "@chromatic-com/storybook": "^1.5.0",
-      "@emotion/is-prop-valid": "^1.2.2",
-      "@swc/core": "^1.3.68",
-      "@swc/plugin-styled-components": "^6.8.2",
-      "@types/dom-to-image": "^2.6.7",
-      "@types/react": "^19.1.2",
-      "@types/react-dom": "^19.1.2",
-      "@vitejs/plugin-react-swc": "^3.0.0",
-      "dom-to-image": "^2.6.0",
-      "react": "19.1.0",
-      "react-dom": "19.1.0",
-      "sass": "^1.77.1",
-      "styled-components": "6.1.17",
-      "typescript": "^5.2.2",
-      "vite": "^6.3.4",
-      "vite-plugin-svgr": "^4.2.0",
-      "vite-plugin-mkcert": "1.17.8",
-      "wrangler": "4.14.4"
+    "@acrool/js-utils": "^3.2.22",
+    "@acrool/react-grid": "^6.0.7",
+    "@acrool/react-table": "^5.1.14",
+    "@acrool/react-toaster": "^3.2.3",
+    "@acrool/window-launcher": "link:..",
+    "@chromatic-com/storybook": "^1.5.0",
+    "@emotion/is-prop-valid": "^1.2.2",
+    "@storybook/addon-essentials": "^8.1.10",
+    "@storybook/addon-interactions": "^8.1.10",
+    "@storybook/addon-links": "^8.1.10",
+    "@storybook/addon-onboarding": "^8.1.10",
+    "@storybook/blocks": "^8.1.10",
+    "@storybook/react": "^8.1.10",
+    "@storybook/react-vite": "^8.1.10",
+    "@storybook/test": "^8.1.10",
+    "@swc/core": "^1.3.68",
+    "@swc/plugin-styled-components": "^6.8.2",
+    "@types/dom-to-image": "^2.6.7",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "@vitejs/plugin-react-swc": "^3.0.0",
+    "dom-to-image": "^2.6.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "sass": "^1.77.1",
+    "storybook": "^8.1.10",
+    "storybook-dark-mode": "^4.0.2",
+    "styled-components": "6.1.17",
+    "typescript": "^5.2.2",
+    "vite": "^6.3.4",
+    "vite-plugin-svgr": "^4.2.0",
+    "wrangler": "4.14.4"
   }
 }
