--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -11,7 +11,7 @@ on:
             - develop
 
 jobs:
-    test:
+    e2e-test:
         runs-on: ubuntu-latest
 
         steps:
@@ -38,17 +38,18 @@ jobs:
               working-directory: example
               run: yarn install
 
-            - name: Install Playwright Browsers
-              working-directory: playwright
-              run: yarn playwright install --with-deps
-
             - name: Start Storybook
-              working-directory: example
               run: yarn storybook &
 
             - name: Wait for Storybook to be ready
               run: npx wait-on http://localhost:6006
 
-            - name: Run Playwright tests
+            - name: Install Playwright Browsers
               working-directory: playwright
+              run: yarn install
+
+            - name: Install Playwright Browsers
+              run: yarn playwright install --with-deps
+
+            - name: Run Playwright tests
               run: yarn test
