--- a/.github/workflows/test-on-release.yml
+++ b/.github/workflows/test-on-release.yml
@@ -13,7 +13,7 @@ on:
       - develop
 
 jobs:
-  test:
+  unit-test:
     if: github.event_name == 'push' || github.event_name == 'pull_request'
     runs-on: ubuntu-latest
 
@@ -34,7 +34,7 @@ jobs:
 
   deploy:
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
-    needs: test
+    needs: unit-test
     runs-on: ubuntu-latest
 
     defaults:
