Add working directories to Playwright workflow steps
Specify the correct working directories for Storybook and Playwright-related steps in the GitHub workflow. This ensures commands are executed in the appropriate subdirectories, improving script reliability and consistency.

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -39,9 +39,11 @@ jobs:
               run: yarn install
 
             - name: Start Storybook
+              working-directory: example
               run: yarn storybook &
 
             - name: Wait for Storybook to be ready
+              working-directory: example
               run: npx wait-on http://localhost:6006
 
             - name: Install Playwright Browsers
@@ -49,7 +51,9 @@ jobs:
               run: yarn install
 
             - name: Install Playwright Browsers
+              working-directory: playwright
               run: yarn playwright install --with-deps
 
             - name: Run Playwright tests
+              working-directory: playwright
               run: yarn test
