--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -13,6 +13,8 @@ on:
 jobs:
     e2e-test:
         runs-on: ubuntu-latest
+        container:
+            image: mcr.microsoft.com/playwright:v1.43.1-jammy
 
         steps:
             - name: Checkout repository
@@ -38,21 +40,16 @@ jobs:
               working-directory: example
               run: yarn install
 
+            - name: Install Playwright dependencies
+              working-directory: playwright
+              run: yarn install
+
             - name: Start Storybook
               working-directory: example
               run: yarn storybook &
 
             - name: Wait for Storybook to be ready
-              working-directory: example
               run: npx wait-on http://localhost:6006
-
-            - name: Install Playwright Browsers
-              working-directory: playwright
-              run: yarn install
-
-            - name: Install Playwright Browsers
-              working-directory: playwright
-              run: yarn playwright install --with-deps
 
             - name: Run Playwright tests
               working-directory: playwright
