Set HOME environment variable in Playwright workflow
Define the HOME environment variable to ensure compatibility with Playwright's container setup. This change ensures the workflow operates smoothly in the specified container environment.

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -15,6 +15,8 @@ jobs:
         runs-on: ubuntu-latest
         container:
             image: mcr.microsoft.com/playwright:v1.52.0-jammy
+        env:
+            HOME: /root
 
         steps:
             - name: Checkout repository
