--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "npm-run-all": "^4.1.5",
     "rollup-plugin-visualizer": "^5.9.0",
     "standard-version": "^9.5.0",
+    "start-server-and-test": "^2.0.12",
     "ts-jest": "^29.3.2",
     "ts-node": "10.9.2",
     "tsconfig-paths": "^4.2.0",
