Simplify Playwright workflow by adjusting script formatting
This update adjusts the formatting of the 'Fix docker config permission' step in the Playwright workflow. It ensures consistency in script style and improves readability without changing functionality.

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -28,7 +28,8 @@ jobs:
                   node-version: '20'
 
             - name: Fix docker config permission (optional)
-              run: sudo rm -f /root/.docker/config.json || true
+              run: |
+                sudo rm -f /root/.docker/config.json || true
 
             - name: Install root dependencies
               run: yarn install
